1644082, fixed or removed Broken external links.

--- a/docs/pipelines/archive/news/2017.md
+++ b/docs/pipelines/archive/news/2017.md
@@ -25,7 +25,7 @@ monikerRange: '>= tfs-2015 <= tfs-2017'
 
 ### Export and import build definitions
 
-Build definitions are implemented internally as .json files, and so you can see details on changes in history. And you can already clone and make templates from your build definitions. But many folks have wanted to take a copy of their CI build logic and reuse it in another project. In fact it's been a [top-ten request on user voice](https://visualstudio.uservoice.com/forums/330519-team-services/category/145254-ci-build).
+Build definitions are implemented internally as .json files, and so you can see details on changes in history. And you can already clone and make templates from your build definitions. But many folks have wanted to take a copy of their CI build logic and reuse it in another project. In fact it's been a top-ten request on user voice.
 
 So we're pleased to announce that now you can do it!
 
